--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^2.22.1",
     "debug": "^2.6.9",
     "mysql": "^2.18.1",
-    "next": "10.2.0",
+    "next": "^10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^0.5.6",
